@@ -101,10 +101,12 @@
               </div>
               <div class="login-container invisible" id="login-container">
                 <div class="login-box">
-                  <form id="userform" class="userform">
-                    <label for="username">Username</label>
-                    <input id="username" type="text" name="username"
-                           autocomplete="username" class="form-control"/>
+                  <form id="loginform" class="loginform">
+                    <div id="userform">
+                      <label for="username">Username</label>
+                      <input id="username" type="text" name="username"
+                             autocomplete="username" class="form-control"/>
+                    </div>
                     <div id="passwordform">
                       <label for="password">Password</label>
                       <input id="password" type="password" name="password"
