@@ -2,7 +2,9 @@ Galene 0.9.1 (unreleased)
 
   * Added an example client with minimal functionality under static/example.
   * Fixed a race condition that would cause the client to run with
-    undefined settings if the initial connection was extremely quick.
+    undefined settings if the initial connection was extremely fast.
+  * Changed the token login to force a user interaction in order to avoid
+    issues with autoplay.
   * Implemented client-side timeouts (we already had one on the server side).
   * Reduced the server-side timeout.
   * Don't attempt to set the file descriptor limit, since recent versions
